tooling/nargo_cli/tests/snapshots/execution_success/regression_7062/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(value: Field, index: u32) {
    let mut args: [Field] = &[0, 1];
    args[index] = value;
    // Safety: comment added by `nargo expand`
    unsafe { store(args) };
    assert((args[0] + args[1]) != 0);
}

pub unconstrained fn store(_: [Field]) {}
